--- a/styles/style.css
+++ b/styles/style.css
@@ -17,16 +17,20 @@
 
 body {
     box-sizing: border-box;
+    margin: 0%;
+    height: 100%;
+    width: 100%;
     background-color: var(--cor-primaria);
     color: var(--cor-secundaria);
 }
 
 .cabecalho {
-    padding: 2% 0% 0% 15%;
+    padding: 2% 0% 0% 0%;
 }
 
 .cabecalho__menu {
     display: flex;
+    justify-content: center;
     gap: 80px;
 }
 
@@ -39,11 +43,12 @@ body {
 }
 
 .apresentacao {
-    padding: 5% 15%;
+    padding: 5% 0%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    gap: 82px;
+    text-align: center;
+    gap: 50px;
 }
 
 .apresentacao__conteudo {
@@ -72,6 +77,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
     gap: 32px;
 
 }
@@ -96,6 +102,7 @@ body {
     text-decoration: none;
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
+    margin: 1em;
 }
 
 .apresentacao__links__navegacao:hover{
@@ -104,17 +111,28 @@ body {
 }
 
 .apresentacao__imagem {
-    width: 50%;
+    width: 100%;
+}
+
+.rodape__container {
+    position: relative;
+    min-height: 100%;
+    left: 0;
+    bottom: 0;
 }
 
 .rodape {
-    padding: 24px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 18px;
     color: var(--cor-primaria);
     background-color: var(--cor-terciaria);
     text-align: center;
     font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
-    font-weight: 400;
+    font-weight: 600;
 }
 
 @media (max-width: 1000px) {
